--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,27 @@ body {
   font-family: 'Playfair Display', serif;
 }
 
+.skip {
+        position: absolute;
+        top: -1000px;
+        left: -1000px;
+        height: 1px;
+        width: 1px;
+        text-align: left;
+        overflow: hidden;
+        background-color: #D8BFD8;
+        color:000;
+}
+
+a.skip:active, 
+a.skip:focus, 
+a.skip:hover {
+  left: 0; 
+  top: 80px;
+  width: auto; 
+  height: auto; 
+  overflow: visible; 
+}
 
 .navbar {
   background-color: #FEB2BF;
